fixed the getIntersections method of Sphere